--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "name": "server",
     "version": "1.0.0",
     "description": "production ready server",
-    "main": "server.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
-        "start": "nodemon server.js",
-        "server:dev": "nodemon server.js",
-        "server:prod": "set NODE_ENV=production&&node server.js"
+        "start": "nodemon app.js",
+        "server:dev": "nodemon app.js",
+        "server:prod": "set NODE_ENV=production&&node app.js"
     },
     "author": "Me",
     "license": "ISC",
