--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-        "start": "pm2 start production.config.json",
+        "start": "nodemon server.js",
         "server:dev": "nodemon app.js",
         "server:prod": "set NODE_ENV=production&&node app.js"
     },
